Footer Fix
Footer logo and text blurb were overlapping.

--- a/conference/static/css/custom.css
+++ b/conference/static/css/custom.css
@@ -207,3 +207,23 @@ li a {
     font-size: 13px;
     line-height: 1.6;
 }
+
+.logo .text {
+    display: block;
+    text-indent: -9999px;
+    background-size: contain !important;
+    float: right;
+    width: 70%;
+    padding-top: 20%;
+}
+
+.logo .graphic {
+    display: block;
+    margin: auto;
+    text-indent: -9999px;
+    background-size: contain !important;
+    float: left;
+    width: 26%;
+    margin-right: 4%;
+    padding-top: 20%;
+}
